<resources>
    <string name="app_name">Agritech</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Username</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This username is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="first_data_need_notification">At least for the first time you need connection to collect data.</string>
    <string name="title_activity_dashboard">DashboardActivity</string>
    <string name="loading">Loading</string>
    <string name="please_wait">Please wait ...</string>
    <string name="title_activity_farmer_list">FarmerListActivity</string>
    <string name="title_activity_demonstration">DemonstrationActivity</string>
    <string name="title_activity_competitor">CompetitorActivity</string>
    <string name="title_activity_new_farmer">NewFarmerActivity</string>
    <string name="first_name">First name</string>
    <string name="middle_name">Middle name</string>
    <string name="last_name">Last name</string>
    <string name="phone_number">Phone number</string>
    <string name="village_name">village Name</string>
    <string name="village_id">Village id</string>
    <string name="district_name">District name</string>
    <string name="district_id">District id</string>
    <string name="mandal_id">Mandal id</string>
    <string name="mandal_name">Mandal name</string>
    <string name="sesson_name">Sesson name</string>
    <string name="crop_details">Crop details</string>
    <string name="land_area">Land area</string>
    <string name="remarks">Remarks</string>
    <string name="farmer_search">Farmer search</string>
    <string name="crop">Crop</string>
    <string name="crop_problem">Crop problem</string>
    <string name="symptoms">Symptoms</string>
    <string name="integrity_scale">Integrity scale</string>
    <string name="product_used">Product used</string>
    <string name="product_suggested">Product suggested</string>
    <string name="dosage">Dosage</string>
    <string name="quantity">Quantity</string>
    <string name="crop_pic">Crop pic</string>
    <string name="framer_grade">Framer grade</string>
    <string name="submit">submit</string>
</resources>
